--- a/indexs.html
+++ b/indexs.html
@@ -2,47 +2,28 @@
 <html lang="en">
 
 <head>
-
-    <title>Techstack</title>
-    <style>
-       table,tr,th,td{
-        border: 2px;
-       }
-    </style>
+    <title>Index</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <style>
+            #person{
+                font-size: larger;
+                color: blue;
+            }
+        </style>
 </head>
 
 <body>
-    <table id="tab">
-        <thead>
-            <tr>
-                <th>sr.no</th>
-                <th>Technology</th>
-                <th>Rating</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>1</td>
-                <td>HTML</td>
-                <td>4</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>Angular</td>
-                <td>5</td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>Python</td>
-                <td>4</td>
-            </tr>
-            <tr>
-                <td>4</td>
-                <td>Java</td>
-                <td>5</td>
-            </tr>
-        </tbody>
-    </table>
+    <header id="person">
+        <strong><i class="fa-regular fa-user"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ROHIT &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <i class="fa-solid fa-phone"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;7219250465&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <i class="fa-solid fa-envelope"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rohit.b@gmail.com</strong>
+    </header>
+    <nav>
+        
+    </nav>
+
 </body>
 
 </html>
